@@ -6,9 +6,9 @@
 
 add_executable(mpSample3 sample3.cpp)
 # Under Windows, the target type must be WINDOWS, not CONSOLE
-if(WIN32)
+if(WIN32 AND MSVC)
 	set_target_properties(mpSample3 PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
-endif(WIN32)
+endif(WIN32 AND MSVC)
 # Linux cross compiling to x86 from x86_64 distribution
 if(LINUX_64_32_CROSSCOMPILE)
     set_source_files_properties(sample3.cpp PROPERTIES COMPILE_FLAGS "-m32 -DwxSIZE_T_IS_UINT")
